fixes for redis cache